# ai-daily-news

./: .gitignore  README.md  SKILL.md  ai_daily.py  pyproject.toml
references/: template.md
