[project]
name = "ai-daily-news"
version = "1.0.0"
description = "Daily AI news aggregation and push to Feishu"
authors = [
  { name = "ArkClaw", email = "contact@arkclaw.ai" }
]
dependencies = [
  "requests>=2.31.0",
  "feedparser>=6.0.10",
  "beautifulsoup4>=4.12.0",
  "arxiv>=2.1.3",
]
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = []
